fix: mobile user menu z-index to appear above drawer

--- a/static/scss/top-app-bar.scss
+++ b/static/scss/top-app-bar.scss
@@ -216,4 +216,5 @@ a.mobile-auth-button {
 
 .mobile-user-menu {
   margin-left: 10px;
+  z-index: 1060;
 }
